gcc/testsuite/rust/rustc/ui/associated-type-bounds/binder-on-bound_dg.rs
trait Trait {
    type Bound<'a>;
}

fn foo() where Trait<for<'a> Bound<'a> = &'a ()> {
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

